Programming Languages/hw10/.metals/metals.log
2024.11.08 00:24:06 WARN  Flyway upgrade recommended: H2 2.3.232 is newer than this version of Flyway and support has not been tested. The latest supported version of H2 is 2.2.224.
2024.11.08 00:24:06 INFO  no build target found for C:\Users\aden.clymer\OneDrive - West Point\Classes\2025-1 Classes\Day 2\CS478\hw10\hw10\hw10.scala. Using presentation compiler with project's scala-library version: 3.3.4
2024.11.08 00:24:09 INFO  no build target found for C:\Users\aden.clymer\OneDrive - West Point\Classes\2025-1 Classes\Day 2\CS478\hw10\hw10\hw10.scala. Using presentation compiler with project's scala-library version: 3.3.4
2024.11.08 00:24:09 INFO  Attempting to connect to the build server...
2024.11.08 00:24:09 INFO  No running Bloop server found, starting one.
2024.11.08 00:24:16 INFO  no build target found for C:\Users\aden.clymer\OneDrive - West Point\Classes\2025-1 Classes\Day 2\CS478\hw10\hw10\hw10.scala. Using presentation compiler with project's scala-library version: 3.3.4
2024.11.08 00:24:16 INFO  no build target found for C:\Users\aden.clymer\OneDrive - West Point\Classes\2025-1 Classes\Day 2\CS478\hw10\hw10\hw10.scala. Using presentation compiler with project's scala-library version: 3.3.4
2024.11.08 00:24:17 INFO  no build target found for C:\Users\aden.clymer\OneDrive - West Point\Classes\2025-1 Classes\Day 2\CS478\hw10\hw10\hw10.scala. Using presentation compiler with project's scala-library version: 3.3.4
2024.11.08 00:24:22 INFO  Starting compilation server
2024.11.08 00:24:27 INFO  tracing is disabled for protocol BSP, to enable tracing of incoming and outgoing JSON messages create an empty file at C:\Users\aden.clymer\OneDrive - West Point\Classes\2025-1 Classes\Day 2\CS478\hw10\.metals\bsp.trace.json or C:\Users\aden.clymer\AppData\Local\scalameta\metals\cache\bsp.trace.json
2024.11.08 00:24:27 INFO  time: Connected to build server in 17s
2024.11.08 00:24:27 INFO  Connected to Build server: Bloop v2.0.3
2024.11.08 00:24:27 INFO  time: Imported build in 0.17s
2024.11.08 00:24:27 INFO  running doctor check
2024.11.08 00:24:27 INFO  java targets: 
2024.11.08 00:24:30 INFO  no build target found for C:\Users\aden.clymer\OneDrive - West Point\Classes\2025-1 Classes\Day 2\CS478\hw10\hw10\hw10.scala. Using presentation compiler with project's scala-library version: 3.3.4
2024.11.08 00:24:31 WARN  Flyway upgrade recommended: H2 2.3.232 is newer than this version of Flyway and support has not been tested. The latest supported version of H2 is 2.2.224.
2024.11.08 00:24:40 INFO  no build target found for C:\Users\aden.clymer\OneDrive - West Point\Classes\2025-1 Classes\Day 2\CS478\hw10\hw10\hw10.scala. Using presentation compiler with project's scala-library version: 3.3.4
2024.11.08 00:24:50 ERROR scalafmt: C:\Users\aden.clymer\OneDrive - West Point\Classes\2025-1 Classes\Day 2\CS478\hw10\hw10\hw10.scala:1: error: [dialect scala213] ; expected but : found
object hw10 extends hwtest.hw("CS478"):
                                      ^
2024.11.08 00:24:50 INFO  no build target found for C:\Users\aden.clymer\OneDrive - West Point\Classes\2025-1 Classes\Day 2\CS478\hw10\hw10\hw10.scala. Using presentation compiler with project's scala-library version: 3.3.4
2024.11.08 00:24:50 WARN  no build target for: C:\Users\aden.clymer\OneDrive - West Point\Classes\2025-1 Classes\Day 2\CS478\hw10\hw10\hw10.scala
2024.11.08 00:24:50 INFO  no build target found for C:\Users\aden.clymer\OneDrive - West Point\Classes\2025-1 Classes\Day 2\CS478\hw10\hw10\hw10.scala. Using presentation compiler with project's scala-library version: 3.3.4
2024.11.08 00:24:51 INFO  time: indexed workspace in 23s
2024.11.08 00:24:51 WARN  no build target for: C:\Users\aden.clymer\OneDrive - West Point\Classes\2025-1 Classes\Day 2\CS478\hw10\hw10\hw10.scala
2024.11.08 00:24:51 INFO  no build target found for C:\Users\aden.clymer\OneDrive - West Point\Classes\2025-1 Classes\Day 2\CS478\hw10\hw10\hw10.scala. Using presentation compiler with project's scala-library version: 3.3.4
2024.11.08 00:24:51 INFO  no build target found for C:\Users\aden.clymer\OneDrive - West Point\Classes\2025-1 Classes\Day 2\CS478\hw10\hw10\hw10.scala. Using presentation compiler with project's scala-library version: 3.3.4
2024.11.08 00:25:06 INFO  Shutting down server
2024.11.08 00:25:06 INFO  shutting down Metals
2024.11.08 00:25:06 INFO  Shut down connection with build server.
2024.11.08 00:25:06 INFO  Exiting server
